--- a/clojure-web-application.org
+++ b/clojure-web-application.org
@@ -1,7 +1,7 @@
 Creating a Clojure web-application without setting your hair on fire
 
 * Introduction
-
+  
 * Clojure Builds Tool
 ** Leningen - Which I'm going to use for this demonstration
 ** Boot
@@ -9,7 +9,7 @@ Creating a Clojure web-application without setting your hair on fire
 * IDE's
 ** EMACS + CiDer
 ** Lighttable
-** Visual Code
+** Visual Code   
 
 * Creating a simple web application
 - Using two clojure libraries, Ring and built ontop of this Compojure
@@ -18,19 +18,21 @@ Creating a Clojure web-application without setting your hair on fire
 - Open the file project.clj to see the project file including depdencies
 - Dependency management is carried out using maven behind the scenes
 - The web-application can be run using lein and ring on an embedded Jetty Server
-- We can also created a self contained jar
+- We can also create a self contained jar
 - lein ring uberjar
 
 ** Rendering views
 *** Request mapping user handler, add new mapping
 *** Make the output look nice using hiccup
 **** Using library https://github.com/weavejester/hiccup
-**** Import the library into the project [hiccup "1.0.5"]
+**** Import the library into the project 
+[hiccup "1.0.5"]
 **** Use the library in out handler [hiccup.page :as h]
 **** Make the handler return some html
 (h/html5
 [:head [:title "Tech Talk"]]
 [:body ""])
+
 
 ** Handling Request Parameters
 *** As parth variables
@@ -38,3 +40,20 @@ Creating a Clojure web-application without setting your hair on fire
 
 
 ** Returning responses as JSON
+*** A closer look at the requse handler code
+*** Modify request handler to return json reponses
+**** Add ring clojure library to project 
+[ring/ring-json "0.4.0"]
+**** Import the library into the handler 
+[ring.middleware.json :refer [wrap-json-response wrap-json-body]]
+**** Alter the handler mapping to handle json rsponses
+(def app
+  (-> app-routes
+      (wrap-defaults site-defaults)
+      wrap-json-response))
+**** Add a request mapping to return some json      
+  (GET "/json" []
+       {:status 200
+        :headers {"Content-Type" "text/html"}
+        :body {:location "Yatton"
+               :unit "12A"}})
