--- a/clojure-web-application.org
+++ b/clojure-web-application.org
@@ -1,25 +1,35 @@
-Creating a Clojure web-application without setting your hair on fire
+#+TITLE:     Creating a Clojure web-application without setting your hair on fire
+#+AUTHOR:    Richard Tiffin
+#+EMAIL:     richard.tiffin@costain.com
 
 * Introduction
   
+* Pre-requisits
+A JDK, using version 8 for this demonstration
+
+
 * Clojure Builds Tool
 ** Leningen - Which I'm going to use for this demonstration
 ** Boot
+
 
 * IDE's
 ** EMACS + CiDer
 ** Lighttable
 ** Visual Code   
+   
 
 * Creating a simple web application
-- Using two clojure libraries, Ring and built ontop of this Compojure
-- Create a new web-application using leiningen
-- lein new compojure costain-techtalk
-- Open the file project.clj to see the project file including depdencies
+** Using two clojure libraries, Ring and built ontop of this Compojure
+** Create a new web-application using leiningen
+lein new compojure costain-techtalk
+** Open the file project.clj to see the project file including depdencies
 - Dependency management is carried out using maven behind the scenes
 - The web-application can be run using lein and ring on an embedded Jetty Server
-- We can also create a self contained jar
-- lein ring uberjar
+** We can also create a self contained jar
+lein ring uberjar
+java -jar target/costain-techtalk-0.1.0-SNAPSHOT-standalone.jar
+
 
 ** Rendering views
 *** Request mapping user handler, add new mapping
